--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script defer src="js/main.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Fascinate+Inline&display=swap" rel="stylesheet">
+    <title>Tic Tac Toe</title>
 </head>
 <body>
-    
+    <h1>Tic Tac Toe</h1>
+    <h2>Someone Make a Move</h2>
+    <section class="container" id="forHover">
+        <div id="0"></div>
+        <div id="1"></div>
+        <div id="2"></div>
+
+        <div id="3"></div>
+        <div id="4"></div>
+        <div id="5"></div>
+
+        <div id="6"></div>
+        <div id="7"></div>
+        <div id="8"></div>
+    </section>
+    <button id="reset">RESET</button>
 </body>
 </html>
